--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -16,6 +16,7 @@
 @import "components/page/styles.css";
 @import "components/switchblade-menu/styles.css";
 @import "components/ui-mask/styles.css";
+@import "components/validated-form-field/styles.css";
 @import "components/widgets/styles.css";
 @import "components/x-toolbar/styles.css";
 
