--- a/app/styles/garnishes/garnishes.css
+++ b/app/styles/garnishes/garnishes.css
@@ -6,4 +6,5 @@
 @import './_g-color.css';
 @import './_g-grayscale-color.css';
 @import './_g-theme-color.css';
+@import './_g-status-colors.css';
 /*@import './_g-typography.css';*/
