--- a/app/styles/objects/_o-navbar-page.css
+++ b/app/styles/objects/_o-navbar-page.css
@@ -1,12 +1,16 @@
 .o-navbar-page--header-xs {
   padding-top: var(--height__header--xSmall);
+  padding-bottom: var(--height__header--xSmall);
 }
 .o-navbar-page--header-sm {
   padding-top: var(--height__header--small);
+  padding-bottom: var(--height__header--small);
 }
 .o-navbar-page--header-md {
   padding-top: var(--height__header--medium);
+  padding-bottom: var(--height__header--medium);
 }
 .o-navbar-page--header-lg {
   padding-top: var(--height__header--large);
+  padding-bottom: var(--height__header--large);
 }
