--- a/app/login/login-page/login-page-form/template.hbs
+++ b/app/login/login-page/login-page-form/template.hbs
@@ -33,8 +33,8 @@
       </label>
 
       {{input
-        class="c-form-field-input
-               c-form-field-input--dark-background
+        class="c-form-field-text-input
+               c-form-field-text-input--dark-background
                c-ripple-form-field__content
                o-grid-cell
                g-font-larger
@@ -79,7 +79,7 @@
       </label>
 
       {{input
-        class="c-form-field-input
+        class="c-form-field-text-input
                c-ripple-form-field__content
                o-grid-cell
                g-font-larger
@@ -105,7 +105,7 @@
     }}
 
       <input id={{fieldId}}
-        class="c-form-field-input-checkbox
+        class="c-form-field-text-input-checkbox
                c-solid-checkbox-field__input
                o-grid-cell
                o-grid-cell--auto
@@ -140,7 +140,7 @@
 
       <input
         id={{fieldId}}
-        class="c-form-field-input
+        class="c-form-field-text-input
                c-solid-radio-field__input
                o-grid-cell
                o-grid-cell--auto
@@ -175,7 +175,7 @@
 
       {{input
         id=fieldId
-        class="c-form-field-input
+        class="c-form-field-text-input
                o-grid-cell
                o-grid-cell--auto
                g-border-none
@@ -209,7 +209,7 @@
 
       {{input
         id=fieldId
-        class="c-form-field-input
+        class="c-form-field-text-input
                c-solid-radio-field__input
                o-grid-cell
                o-grid-cell--auto
@@ -251,7 +251,7 @@
 
       <select
         id={{fieldId}}
-        class="c-form-field-input c-form-field-input-select">
+        class="c-form-field-text-input c-form-field-select-input">
         <optgroup label="Men's">
           <option value="m-small">Small</option>
           <option value="m-medium">medium</option>
