--- a/app/register/register-page/template.hbs
+++ b/app/register/register-page/template.hbs
@@ -29,17 +29,6 @@
                  u-m2
                  o-flex-grid
                  o-flex-grid--full"
-          labelClassNames="c-form__field-label
-                           c-ripple-form-field__label
-                           o-grid-cell
-                           g-font-700
-                           g-inherit"
-          inputClassNames="c-form-field-input
-                           c-form-field-input--dark-background
-                           c-ripple-form-field__content
-                           o-grid-cell
-                           g-font-larger
-                           g-border-s1"
         }}
       {{!--
         <label
@@ -53,8 +42,8 @@
         </label>
 
         {{input
-          class="c-form-field-input
-                 c-form-field-input--dark-background
+          class="c-form-field-text-input
+                 c-form-field-text-input--dark-background
                  c-ripple-form-field__content
                  o-grid-cell
                  g-font-larger
@@ -103,8 +92,8 @@
         </label>
 
         {{input
-          class="c-form-field-input
-                 c-form-field-input--dark-background
+          class="c-form-field-text-input
+                 c-form-field-text-input--dark-background
                  c-ripple-form-field__content
                  o-grid-cell
                  g-font-larger
@@ -150,7 +139,7 @@
         </label>
 
         {{input
-          class="c-form-field-input
+          class="c-form-field-text-input
                  c-ripple-form-field__content
                  o-grid-cell
                  g-font-larger
@@ -187,7 +176,7 @@
         </label>
 
         {{input
-          class="c-form-field-input
+          class="c-form-field-text-input
                  c-ripple-form-field__content
                  o-grid-cell
                  g-font-larger
