--- a/app/styles/objects/_o-input.css
+++ b/app/styles/objects/_o-input.css
@@ -4,6 +4,7 @@
 
 .o-text-input {
   line-height: var(--line-height__text-input);
+  height: var(--height__text-input);
   padding-left: 1em;
   padding-right: 1em;
 }
