--- a/app/styles/ui-components/core/forms/forms.css
+++ b/app/styles/ui-components/core/forms/forms.css
@@ -1,4 +1,4 @@
-@import './_c-form-field-input.css';
+@import './_c-form-field-text-input.css';
 @import './_c-form-select-input.css';
 @import './_c-ripple-form-field.css';
 @import './_c-solid-checkbox-and-radio.css';
