--- a/app/protected/notebooks/notebook/notes/notes-page/notes-page-toolbar-section/template.hbs
+++ b/app/protected/notebooks/notebook/notes/notes-page/notes-page-toolbar-section/template.hbs
@@ -111,7 +111,7 @@
       class="o-grid-cell
              o-grid-cell--auto
              c-notes-page__note-order-select
-             c-form-select-input
+             c-form-field-select-input
              o-widget-box
              o-menu
              g-bg-theme-primary-1--300
@@ -121,7 +121,7 @@
              u-pr2
              u-ml2
              u-mr2"
-      optionClassNames="c-form-select-input__option"
+      optionClassNames="c-form-field-select-input__option"
       onSelectionChanged=(route-action 'noteSortingDidChange')
       content=noteSortOptions
       optionLabelKey='label'
