--- a/app/register/template.hbs
+++ b/app/register/template.hbs
@@ -2,7 +2,6 @@
   class="g-border-top-s3"
   newUserModel=model.user
   newUserPrivateInfoModel=model.userPrivateInfo
-  formValues=model.formValues
-  isFormDirty=(mut model.isFormDirty)
+  showAlert=model.showAlert
   onRegisterUser=(route-action 'onRegisterUser')
 }}
