--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -12,6 +12,7 @@
 @import "components/autocomplete-search-results-option/styles.css";
 @import "components/cards/styles.css";
 @import "components/color-palette-menu-widget/styles.css";
+@import "components/alert-box/styles.css";
 @import "components/note-card/styles.css";
 @import "components/page/styles.css";
 @import "components/switchblade-menu/styles.css";
