--- a/app/styles/base-variables/color/_status-colors.css
+++ b/app/styles/base-variables/color/_status-colors.css
@@ -1,4 +1,8 @@
 :root {
-  --status-color__valid: hsla(100, 41%, 64%, 1.00);
-  --status-color__invalid: hsla(355, 65%, 65%, 1.00);
+
+  --status-text-color__valid: hsla(100, 41%, 64%, 1.00);
+  --status-text-color__invalid: hsla(355, 65%, 65%, 1.00);
+
+  --status-background-color__valid: hsla(100, 41%, 64%, 1.00);
+  --status-background-color__invalid: hsla(355, 65%, 65%, 1.00);
 }
