--- a/app/styles/garnishes/_g-status-colors.css
+++ b/app/styles/garnishes/_g-status-colors.css
@@ -1,6 +1,14 @@
-.g-status__valid {
-  color: var(--status-color__valid);
+.g-status--valid {
+  color: var(--status-text-color__valid);
 }
-.g-status__error {
-  color: var(--status-color__invalid);
+.g-status--error {
+  color: var(--status-text-color__invalid);
+}
+
+
+.g-bg-status--valid {
+  background-color: var(--status-background-color__valid);
+}
+.g-bg-status--error {
+  background-color: var(--status-background-color__invalid);
 }
