--- a/app/register/template.hbs
+++ b/app/register/template.hbs
@@ -1,7 +1,7 @@
 {{register/register-page
   class="g-border-top-s3"
   newUserModel=model.user
-  newUserPrivateInfoModel=model.userPrivateInfo
+  newUserPrivateInfoModel=model.user.userPrivateInfo
   showAlert=model.showAlert
   onRegisterUser=(route-action 'onRegisterUser')
 }}
