--- a/app/components/alert-box/template.hbs
+++ b/app/components/alert-box/template.hbs
@@ -5,7 +5,7 @@
          u-edge-top
          u-edge-right"
   stroke="currentColor"
-  stroke-width="0.5em"
+  strokeWidth="0.25em"
   onPressed=(action "closeButtonClicked")
   iconURL="assets/icons.svg#icon_x"
 }}
