refactor x-button and fix lint errors

--- a/app/login/login-page/login-page-form/template.hbs
+++ b/app/login/login-page/login-page-form/template.hbs
@@ -251,7 +251,7 @@
 
       <select
         id={{fieldId}}
-        class="c-form-field-text-input c-form-field-select-input">
+        class="c-form-field-text-input c-select-input">
         <optgroup label="Men's">
           <option value="m-small">Small</option>
           <option value="m-medium">medium</option>
