progress on service-worker layout and functionatlity

--- a/app/styles/ui-components/ui-components.css
+++ b/app/styles/ui-components/ui-components.css
@@ -3,6 +3,8 @@
  * own full-on Ember components associated with them
  */
 
+ @import './_flash-message.css';
+ @import './_flash-messages.css';
  @import './_navbar.css';
 
  @import './buttons/buttons.css';
